--- a/repository-data/site/src/main/resources/hcm-config/hst/configurations/default/catalog.yaml
+++ b/repository-data/site/src/main/resources/hcm-config/hst/configurations/default/catalog.yaml
@@ -14,3 +14,5 @@ definitions:
         hst:iconpath: images/essentials/catalog-component-icons/simple-content.svg
         hst:label: Title
         hst:template: title-component
+        hst:parameternames: [title, pageNumber]
+        hst:parametervalues: ['${1}', '${2}']
