--- a/repository-data/application/src/main/resources/hcm-config/namespaces/hippo-cool/basedocument.yaml
+++ b/repository-data/application/src/main/resources/hcm-config/namespaces/hippo-cool/basedocument.yaml
@@ -3,9 +3,11 @@ definitions:
     /hippo:namespaces/hippocool/basedocument:
       jcr:primaryType: hipposysedit:templatetype
       jcr:mixinTypes: ['mix:referenceable']
+      jcr:uuid: a8a09fc8-3842-48ad-941c-51c9541ad936
       /hipposysedit:nodetype:
         jcr:primaryType: hippo:handle
         jcr:mixinTypes: ['mix:referenceable']
+        jcr:uuid: 89fc6f43-e0de-4be3-b23b-73c281069494
         /hipposysedit:nodetype:
           jcr:primaryType: hipposysedit:nodetype
           jcr:mixinTypes: ['hipposysedit:remodel']
