--- a/repository-data/application/src/main/resources/hcm-content/content/documents/hippo-cool.yaml
+++ b/repository-data/application/src/main/resources/hcm-content/content/documents/hippo-cool.yaml
@@ -1,6 +1,8 @@
 /content/documents/hippocool:
+  .meta:order-before: administration
   jcr:primaryType: hippostd:folder
   jcr:mixinTypes: ['hippo:named', 'hippotranslation:translated', 'mix:referenceable']
+  jcr:uuid: e44002df-078d-4791-b650-302dedbd9251
   hippo:name: Hippo Cool
   hippostd:foldertype: [new-translated-folder, new-document]
   hippotranslation:id: 996bcac5-86cf-49b5-a7a3-16a74863e814
