--- a/repository-data/site/src/main/resources/hcm-config/hst/configurations/default/templates.yaml
+++ b/repository-data/site/src/main/resources/hcm-config/hst/configurations/default/templates.yaml
@@ -3,3 +3,6 @@ definitions:
     /hst:hst/hst:configurations/hst:default/hst:templates/contentpage-main:
       jcr:primaryType: hst:template
       hst:renderpath: webfile:/freemarker/hstdefault/contentpage-main.ftl
+    /hst:hst/hst:configurations/hst:default/hst:templates/hero-banner:
+      jcr:primaryType: hst:template
+      hst:renderpath: webfile:/freemarker/hstdefault/herobanner-component.ftl
