--- a/repository-data/site/src/main/resources/hcm-config/hst/configurations/hippo-cool/workspace/containers.yaml
+++ b/repository-data/site/src/main/resources/hcm-config/hst/configurations/hippo-cool/workspace/containers.yaml
@@ -21,6 +21,7 @@ definitions:
           jcr:primaryType: hst:containercomponent
           hst:label: Home Page Main
           hst:xtype: hst.vbox
+          hst:lastmodified: 2019-09-13T15:23:17.010+05:30
       /pagenotfound:
         jcr:primaryType: hst:containercomponentfolder
         /main:
